JumpScript/tests/baselines/reference/extendsClauseAlreadySeen2.errors.txt
tests/cases/compiler/extendsClauseAlreadySeen2.jump(4,30): error TS1172: 'extends' clause already seen.


==== tests/cases/compiler/extendsClauseAlreadySeen2.jump (1 errors) ====
    class C<T> {
    
    }
    class D<T> extends C<number> extends C<string> {
                                 ~~~~~~~
!!! error TS1172: 'extends' clause already seen.
        baz() { }
    }